# SDS-CP012-ai-adventure-game

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
console-test-results/lisha-eapen/: LangChain TestResults.txt  LangChainTestResults.txt  OpenAI API TestResults.txt
notebooks/jeroenvdmbrugge/: config.py  game.py  prompts.py  test_prompting.ipynb  test_prompting.py
notebooks/julien-hovan/: openrouter-example.ipynb
notebooks/lisha-eapen/: langchain-example.py  langchain-textbasedadventuregame.py  lisha-cp12TextBasedAdventureGame.ipynb  openai-api-example.py  openai-api-textbasedadventuregame.py
notebooks/magid_bugazia/: .gitignore  adventure_game.py  anthropic_setup_ReadMe.md  config.py  test_LLM_api.py  test_langchain.py
notebooks/shaheer-airaj/: langchain-example.py  openai-api-example.py
routers/: base_chat_provider.py  chat_openai.py  chat_openrouter.py
src/: config.py  game_engine.py
templates/: character_setting_setup.md  fantasy_realm_prompt.md  system_prompt.md
utils/: utils.py
web-app/: app.py
web-app/lisha-eapen/: app.py  streamlit_cheat_sheet.ipynb
web-app/magid_bugazia/: app.py  app_engine.py
